Creation of nav bar and header.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,23 @@
   </head>
   
   <header> 
+        <!-- Navbar -->
+        <nav class="navbar fixed-top navbar-expand-md navbar-light bg-light bg-gradient .shadow-5 justify-content-end">
+          <!-- Container wrapper -->
+          <div class="container">
+            <!-- NavBar Title -->
+            <a class="responsive-font-example" style="color: black; font-weight: bold;" href="#home">
+              CHRIS FORDE // FRONT END DEV</a>
+            <!-- Toggle Button -->
+            <button class="navbar-toggler bg-white shadow-5-strong ms-auto"
+              type="button"
+              data-mdb-toggle="collapse"
+              data-mdb-target="#navbarNav"
+              aria-controls="navbarNav"
+              aria-expanded="false"
+              aria-label="Toggle navigation">
+              <!-- Toggle Button icon -->
+            <i class="fas fa-water"></i>
   </header>
 
 <body>
