--- a/index.html
+++ b/index.html
@@ -37,6 +37,27 @@
               aria-label="Toggle navigation">
               <!-- Toggle Button icon -->
             <i class="fas fa-water"></i>
+          </button>
+
+        
+          <!-- Collapsable Navigation -->
+          <div class="collapse navbar-collapse justify-content-end" style="border-radius: 4px;" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#home">&nbsp;&nbsp;HOME</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#about">&nbsp;&nbsp;ABOUT</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#contact">&nbsp;&nbsp;CONTACT</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#project">&nbsp;&nbsp;PROJECTS</a>
+              </li>
+            </ul>
+          </div>
+      </nav>  
   </header>
 
 <body>
