Addition of name, title, hire me button.

--- a/index.html
+++ b/index.html
@@ -62,6 +62,29 @@
 
 <body>
   <section id="home"> <!-- Home content and bg image BELOW -->
+    <div
+    class="p-5 text-center bg-image"
+    style="background-image: url('https://wallpapertops.com/walldb/original/e/2/e/24265.jpg');
+      height: 100vh;">
+    <div class="mask" style="background-color: rgba(0, 0, 0, 0.3);">
+      <div class="d-flex justify-content-center align-items-center h-100">
+        <div id="header-inner" class="text-white">
+          <br /><br /><br />
+          <h5 class="mb-3">---Front End Web Developer in Training---</h5>
+          <h4 class="mb-3">Chris Forde</h4> 
+          <br /><br /><br /><!-- Home Buttons BELOW-->
+          <a 
+              class="btn btn-outline-light btn-lg m-2 col-4"
+              style="background-color: rgba(0, 0, 0, 0.2);"
+              href="#contact"
+              role="button">
+              HIRE ME
+          </a>
+           
+        </div>
+      </div>
+    </div>
+  </div>
   </section>
 
   <section id="about"> <!-- About Me content with bg image BELOW. -->
