Addition of CV links and social media link logos.

--- a/index.html
+++ b/index.html
@@ -63,28 +63,56 @@
 <body>
   <section id="home"> <!-- Home content and bg image BELOW -->
     <div
-    class="p-5 text-center bg-image"
-    style="background-image: url('https://wallpapertops.com/walldb/original/e/2/e/24265.jpg');
-      height: 100vh;">
-    <div class="mask" style="background-color: rgba(0, 0, 0, 0.3);">
-      <div class="d-flex justify-content-center align-items-center h-100">
-        <div id="header-inner" class="text-white">
-          <br /><br /><br />
-          <h5 class="mb-3">---Front End Web Developer in Training---</h5>
-          <h4 class="mb-3">Chris Forde</h4> 
-          <br /><br /><br /><!-- Home Buttons BELOW-->
-          <a 
-              class="btn btn-outline-light btn-lg m-2 col-4"
+      class="p-5 text-center bg-image"
+      style="background-image: url('https://wallpapertops.com/walldb/original/e/2/e/24265.jpg');
+        height: 100vh;">
+      <div class="mask" style="background-color: rgba(0, 0, 0, 0.3);">
+        <div class="d-flex justify-content-center align-items-center h-100">
+          <div id="header-inner" class="text-white">
+            <br /><br /><br />
+            <h5 class="mb-3">---Front End Web Developer in Training---</h5>
+            <h4 class="mb-3">Chris Forde</h4> 
+            <br /><br /><br /><!-- Home Buttons BELOW-->
+            <a 
+                class="btn btn-outline-light btn-lg m-2 col-4"
+                style="background-color: rgba(0, 0, 0, 0.2);"
+                href="#contact"
+                role="button">
+                HIRE ME
+            </a>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a
+              class="btn btn-outline-light btn-lg m-2 col-5"
               style="background-color: rgba(0, 0, 0, 0.2);"
-              href="#contact"
+              href="assets/CHRIS FORDE CURICULUM VITAE.pdf"
+              target="_blank"
               role="button">
-              HIRE ME
-          </a>
-           
+              Review my CV
+            </a>
+            <br /><br /><br /><br /><br /><!-- Home GH FB IG Links BELOW-->
+            <div class="row justify-content-center">
+              <div class="col-3">
+              <a href="https://github.com/Christ-Mass">
+                <i class="fab fa-github fa-2x" style="color: white;"></i>
+              </a>
+              </div>
+              <br /><br />
+              <div class="col-3">
+              <a href="https://www.facebook.com/">
+                <i class="fab fa-facebook fa-2x" style="color: white;"></i>
+              </a>
+              </div>
+              <br /><br />
+              <div class="col-3">              
+              <a  href="https://www.instagram.com/">
+                <i class="fab fa-instagram fa-2x " style="color: white;"></i>
+              </a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-  </div>
   </section>
 
   <section id="about"> <!-- About Me content with bg image BELOW. -->
