about page content.

--- a/index.html
+++ b/index.html
@@ -116,6 +116,35 @@
   </section>
 
   <section id="about"> <!-- About Me content with bg image BELOW. -->
+    <div
+      class="p-10 text-center bg-image"
+      style="background-image: url('img/BgAbout.jpg');
+      height: 100vh;">
+      <div class="mask" style="background-color: rgba(0, 0, 0, 0.4);">
+        <div class="d-flex justify-content-center align-items-center h-100">
+          <div id="header-inner" class="text-white p-5">
+            <h2>ABOUT ME:</h2>
+            <br />
+            <p>Hi, I'm Chris, an aspiring Front End Web Developer, from the UK.</p>
+            <p>I have discovered a growing passion in creating interesting websites and exploring the capabilities of new applications.</p>
+            <p>At present, my capabilities cover: HTML5, JS, CSS & BOOTSTRAP.</p>
+            <p>Do you have a role my skillset can fulfill?</p>
+            <p>
+              <br /> <!-- Button link to contact page. -->
+              <a class="btn btn-outline-light btn-lg m-2"
+              style="font-size: 20px;"
+              href="#contact"
+              role="button"
+              rel="nofollow">
+                <u>
+                  Contact me here
+                </u>
+              </a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 
   <section id="contact"> <!-- Contact content with bg image BELOW. -->
