--- a/index.html
+++ b/index.html
@@ -197,6 +197,80 @@
   </section>
 
   <section id="project"> <!-- Project content with bg image BELOW. -->
+    <div class="bg-image p-10"
+    style="background-image: url('https://wallpapercave.com/wp/wp5060554.jpg'); height: 100%;">
+    <div class="container">
+      <div class="row justify-content-center m-5 text-white " style=" font-size: 200%;">
+        PROJECTS
+      </div> <!-- Project 1 placeholder card BELOW. -->
+      <div class="container" style="padding: 7% ; ">
+        <div class="row justify-content-center">
+          <div class="col-md-5 mb-4" style="height: 40%;" >
+            <div class="card bg-dark">
+              <div class="card text-center bg-light">
+                <div class="bg-image hover-overlay hover-zoom hover-shadow ripple">
+                  <img src="img/p1.webp" class="img-fluid" />
+                  <a href="#!">
+                    <div class="mask" style="background-color: rgba(0, 0, 0, 0.4)">
+                      <div class="d-flex justify-content-center align-items-center h-100 text-white">
+                        <p>PROJECT 1 - PLACEHOLDER</p>
+                      </div>
+                    </div>  
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div> <!-- Project 2 placeholder card BELOW. -->
+          <div class="col-md-5 mb-4" style="height: 40%;" >
+            <div class="card bg-dark">
+              <div class="card text-center bg-light">
+                <div class="bg-image hover-overlay hover-zoom hover-shadow ripple">
+                  <img src="img/p2.webp" class="img-fluid" />
+                  <a href="#!">
+                    <div class="mask" style="background-color: rgba(0, 0, 0, 0.4)">
+                      <div class="d-flex justify-content-center align-items-center h-100 text-white">
+                        <p>PROJECT 2 - PLACEHOLDER</p>
+                      </div>
+                    </div>  
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div> <!-- Project 3 placeholder card BELOW. -->
+          <div class="col-md-5 mb-4" style="height: 40%;" >
+            <div class="card bg-dark">
+              <div class="card text-center bg-light">
+                <div class="bg-image hover-overlay hover-zoom hover-shadow ripple">
+                  <img src="img/p3.webp" class="img-fluid" />
+                  <a href="#!">
+                    <div class="mask" style="background-color: rgba(0, 0, 0, 0.4)">
+                      <div class="d-flex justify-content-center align-items-center h-100 text-white">
+                        <p>PROJECT 3 - PLACEHOLDER</p>
+                      </div>
+                    </div>  
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div> <!-- Project 4 placeholder card BELOW. -->
+          <div class="col-md-5 mb-4" style="height: 40%;" >
+            <div class="card bg-dark">
+              <div class="card text-center bg-light">
+                <div class="bg-image hover-overlay hover-zoom hover-shadow ripple">
+                  <img src="img/p4.webp" class="img-fluid" />
+                  <a href="#!">
+                    <div class="mask" style="background-color: rgba(0, 0, 0, 0.4)">
+                      <div class="d-flex justify-content-center align-items-center h-100 text-white">
+                        <p>PROJECT 4 - PLACEHOLDER</p>
+                      </div>
+                    </div>  
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
   </section>  
 </body>
 
