footer content, copyright and social media links.

--- a/index.html
+++ b/index.html
@@ -275,6 +275,31 @@
 </body>
 
 <footer> <!-- Footer GH FB IG Links BELOW -->
+  <div class="row justify-content-center mt-3">
+    <div class="col-1">
+    <a href="https://github.com/Christ-Mass">
+      <i class="fab fa-github fa-1x" style="color: rgb(137, 137, 137);"></i>
+    </a>
+    </div>
+    <br /><br />
+    <div class="col-1">
+    <a href="https://www.facebook.com/">
+      <i class="fab fa-facebook fa-1x" style="color: rgb(137, 137, 137);"></i>
+    </a>
+    </div>
+    <br /><br />
+    <div class="col-1">              
+    <a  href="https://www.instagram.com/">
+      <i class="fab fa-instagram fa-1x " style="color: rgb(137, 137, 137);"></i>
+    </a>
+    </div>
+    <!-- My name, copyright and current date BELOW -->
+  <div class="col-6 text-center" style="color: rgb(137, 137, 137); font-size: smaller;" >Chris Forde. ©
+    <span id="copyright">
+      <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script>
+    </span>
+  </p>
+</div> 
 </footer> 
 
 <!-- MDB -->
