Line133: <br> removed. Line135 font size change.

--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
             <p>At present, my capabilities cover: HTML5, JS, CSS & BOOTSTRAP.</p>
             <p>Do you have a role my skillset can fulfill?</p>
             <p>
-              <br /> <!-- Button link to contact page. -->
+              <!-- Button link to contact page. -->
               <a class="btn btn-outline-light btn-lg m-2"
-              style="font-size: 20px;"
+              style="font-size: 17px;"
               href="#contact"
               role="button"
               rel="nofollow">
